# synapse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: rust.yml
migrations/2024-12-30-032812_prompt_format_table/: down.sql  up.sql
src/: config.rs  constants.rs  main.rs  schema.rs  server.rs
src/api/: health.rs  mod.rs  state.rs
src/api/v1/: mod.rs  text_prompt.rs  waypoints.rs
src/cache/: mod.rs
src/cache/clients/: mod.rs
src/database/: base.rs  db_interface.rs  mod.rs
src/errors/: mod.rs
src/inference/: base.rs  factory.rs  interface.rs  mod.rs
src/inference/interfaces/: cohere_interface.rs  local_interface.rs  mod.rs
src/inference/strategies/: cohere_interface.rs  cohere_strategy.rs  custom_interface.rs  local_strategy.rs  mod.rs
src/models/: mod.rs  prompt_format_models.rs  text_prompt_api.rs  text_prompt_models.rs
src/prompting/: mod.rs  prompt_builder.rs
src/prompting/rag/: fill.rs  mod.rs
src/prompting/rag/v1/: mod.rs  waypoints.rs
src/services/v1/: mod.rs  text_prompt.rs  text_prompt_service.rs
