[package]
name = "Synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.83"
derive_more = { version = "1", features = ["full"] }
diesel = { version = "2.2.6", features = ["sqlite", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
rig-core = "0.6.0"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"
