[package]
name = "Synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.88"
derive_more = { version = "2", features = ["full"] }
diesel = { version = "2.2.10", features = ["sqlite", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.27"
rig-core = "0.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = "1.16.0"
